--- a/SmartOrder/SmartOrder/Info.plist
+++ b/SmartOrder/SmartOrder/Info.plist
@@ -16,8 +16,21 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>kakao1a8399e48d3838949189883a2685ab4b</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>KAKAO_APP_KEY</key>
+	<string>kakao1a8399e48d3838949189883a2685ab4b</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -41,5 +54,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>KAKAO_APP_KEY</key>
+    <string>1a8399e48d3838949189883a2685ab4b</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>kakao1a8399e48d3838949189883a2685ab4b</string>
+        <string>kakaokompassauth</string>
+        <string>storykompassauth</string>
+        <string>kakaolink</string>
+        <string>kakaotalk</string>
+        <string>kakaostory</string>
+        <string>storylink</string>
+    </array>
 </dict>
 </plist>
