설정->Settings앱 띄우기, 설정 마무리

--- a/SmartOrder/SmartOrder/Info.plist
+++ b/SmartOrder/SmartOrder/Info.plist
@@ -44,6 +44,7 @@
 	<string>1a8399e48d3838949189883a2685ab4b</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>Settings</string>
 		<string>kakao1a8399e48d3838949189883a2685ab4b</string>
 		<string>kakaokompassauth</string>
 		<string>storykompassauth</string>
